# unified-knowledge-agent

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  clear_cache.py  docker-compose.yml  fetch_phoenix_logs.py  full_evaluation_log.txt  generate_dataset.py  phoenix_trace_log.txt  pyproject.toml  test_67_debug.py  test_retrieval.py
.github/workflows/: sync_to_hub.yml
backend/: app.py  basics.ipynb  memory.py
backend/core/: agents.py  chat.py  config.py  guardrails.py  ingest.py  tools.py
backend/docstore/: 01531995-f7df-4ce4-938c-146ee51cfdbf  05917962-36ce-453c-8801-651cde0681fb  07142ade-f1b3-49d3-8dea-5a19d97a622f  0a08abf6-d44e-4105-b6a9-b4c3110f7d0e  0c113991-69e1-45f1-8ded-11d9288f9121  0d2e0561-b2fc-4322-ade8-e3e0f800ebc0  0dc5c79f-8759-45b4-8db2-83211db97695  11052af7-30a7-47e3-bbb7-0a9f83e26f77  136de439-17b0-4193-9fff-e7fcac963129  138aa439-803c-42e2-a2e3-036a50db4068  15723c8f-b18b-4aaf-8119-eb02e2c83266  1767b448-a23a-48d3-a1fe-6b949a04ecef  179f8265-48b7-40db-a0a8-add60600a0f6  (+110 more)
data/: .manifest.json  API RELATED.md  AgenticAI_Interview_Questions_Coding.md  AgenticAI_Interview_Questions_Theory.md  Agentic_AI_Engineer.md  Claude_Code_Hacks.md  Clearing_Storage_in_MACBOOK.md  Errors_in_AgenticAI_Projects.md  Future_Project_Plans.md  JobHunt_Project_Details.md  JobHunt_Project_Problems.md  LangGraph&AgenticAi.md  My-Portfolio-notes.md  NEXTIER_Internship_Bugs.md  Questions_From_Projects.md  RN_Setup_&_Errors.md  RNjs.docx.md  ReactNativeInterviewQuestions.md  Refactor Python code.md  RnAItool.md  TAILWIND CSS.md  Unified_Knowledge_Project_Details.md  html.docx.md  pythonNotesFromVid.docx.md
frontend/: README.md  frontend.Dockerfile  next.config.ts  package-lock.json  package.json
(+18 files in other folders)
